public/css/layout.css
main{
  width: 100%;
  font-size: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

header{
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

header h1{
  font-family: 'Libre Barcode 39 Text';
  font-size: 5em;
  color: hotpink;
  padding-bottom: 40px;
}
header div{
  max-width: 95%;
  display: flex;
  flex-direction: row;
  align-items: center;
}
header input{
  height:40px;
  width:70%;
}
button{
  text-align: center;
  height:32px;
  opacity: 60%;
  border-radius: 25px;
  font-size: 11.5px;
}

video{
  position: fixed;
  z-index: -1;
}

#savedCities{
  display: flex;
  flex-direction: column;
  width: auto;
  margin-top: 40px;
}
#savedCities li{
  display: grid;
  grid-template-columns: 1fr 80px 80px;
  align-items: center;
}
#savedCities span{
  justify-self: start;
  margin-right: 10px;
  font-size: 18px;
  line-height: 26px;
  font-weight: bolder;
}
#savedCities button{
  display: block;
  margin: 5px;
  height: 25px;
}

#query{
  height: 14px;
  font-size: xx-small;
}
#delete{
  height: 14px;
  font-size: xx-small;
}

#avgCard{
  display: grid;
  justify-items: center;
  width: 100%;
}
#avgCard .average{
  width: 95%;
  margin-top: 40px;
  border: 1px solid hotpink;
  background-color: rgba(0,0,0,.45);
}
#avgCard h1{
  font-size: 2.5em;
  padding-bottom: 30px;
}
#avgCard li{
  font-size: 22px;
  line-height: 35px;
}

#apiCards{
  display: grid;
  justify-items: center;
}
#apiCards h1{
  font-size: 1.5em;
  padding-bottom: 30px;
}
#apiCards .entry{
  width: 95%;
  margin-top: 40px;
  border: 1px solid hotpink;
  background-color: rgba(0,0,0,.45);
}
#apiCards ul{
  display: grid;
  grid-template-columns: 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr;
}

#avgCard li, #apiCards li{
  margin:5px;
}

footer{
  width: 100%;
}
nav{
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 40px;
  margin-bottom: 40px;
}
nav ul{
  display: flex;
  justify-content: space-evenly;
  width: 200px;
}
nav button{
  width: 200px;
  margin-top: 10px;
}

/* The Modal (background) */
.modal {
  color: rgba(0, 0, 0, 0.);
  font-family: 'Montserrat', sans-serif;;
  display: none; /* Hidden by default */
  position: fixed; /* Stay in place */
  z-index: 1; /* Sit on top */
  left: 0;
  top: 0;
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  overflow: auto; /* Enable scroll if needed */
  background-color: rgb(0,0,0); /* Fallback color */
  background-color: rgba(0,0,0,.5); /* Black w/ opacity */
}
.modal img{
  width: 350PX;
  padding-top: 15px;
  padding-bottom: 15px;
}

/* Modal Content/Box */
.modal-content {
  display: grid;
  justify-items: center;
  font-family: 'Montserrat', sans-serif;
  font-size: 18px;
  color: ivory;
  background-color: rgba(0,0,0,.2);
  margin: 10% auto; /* 15% from the top and centered */
  width: 90%; /* Could be more or less, depending on screen size */
}
.modal h4{
  font-family: 'Libre Barcode 39 Text';
  font-size: 60px;
  text-align: center;
}
.modalul{
  display: flex;
  flex-direction: column;
  width: 70%;
}
.modalli{
  margin-top: 40px;
  display: grid;
  grid-template-rows: auto;
  justify-items: center;
  margin-bottom: 50px;
}
.modal p{
  width: 100%;
}
/* The Close Button */
.close {
  color: hotpink;
  float: right;
  font-size: 45px;
  font-weight: bold;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}
@media screen and (min-width:481px) and (max-width: 1024px) {
  header h1{
    font-size: 8.75em;
  }

  #avgCard{
    width: 66%
  }
  #avgCard h1{
    font-size: 3em;
    padding-bottom: 30px;
  }
  #avgCard li{
    font-size: 26px;
    line-height: 32px;
  }

  #apiCards{
    display: grid;
    grid-template-columns: 1fr;
    width: 66%;
    justify-items: center;
}
  #apiCards h1{
    font-size: 2em;
    padding-bottom: 30px;
  }
  
}

@media screen and (min-width:1024px){
  header h1{
    font-size: 8.75em;
  }
  #avgCard{
    width: 40%;
  }
  #avgCard h1{
    font-size: 4em;
    padding-bottom: 30px;
  }
  #avgCard li{
    font-size: 32px;
    line-height: 40px;
  }
  #apiCards{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
  }
  #apiCards h1{
    font-size: 2.2em;
    padding-bottom: 30px;
  }
  #apiCards .entry ul{
    grid-template-columns: 1fr;
  }

  .modalul{
    display: flex;
    flex-direction: column;
    width: 50%;
  }

  nav ul{
    display: flex;
    justify-content: space-evenly;
    width: 300px;
  }
}

